test/tests/compiler/14_pointers/invalid_types/extra_credit/compound_assignment_not_lval.plx
#  The result of a compound assignment expression isn't an lvalue, so you can't
#  take its address with &
pub fn main(none) i32 {
    i: i32 = 100
    ptr: *i32 = @(i += 200)
    return nil
}
